feat: cambios home-about-contact

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --primary-color: #292929;
+    /* Color primario */
+    --secondary-color: #98694C;
+    /* Color secundario */
+    --contrast-color: #0D0016;
+    /* Color de contraste */
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+}
