--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -7,23 +7,23 @@
     <div class="carrucel">
         <div class="container">
             <div id="slide">
-                <div class="item" style="background-image: url(../../../assets/carrucel1.png)">
+                <div class="item" style="background-image: url(../../../assets/carrucel1.jpg)">
                     <div class="content">
                     </div>
                 </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel2.png)">
+                <div class="item" style="background-image: url(../../../assets/carrucel2.jpg)">
                     <div class="content">
                     </div>
                 </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel3.png)">
+                <div class="item" style="background-image: url(../../../assets/carrucel3.jpg)">
                     <div class="content">
                     </div>
                 </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel4.png)">
+                <div class="item" style="background-image: url(../../../assets/carrucel4.5.jpg)">
                     <div class="content">
                     </div>
                 </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel5.png)">
+                <div class="item" style="background-image: url(../../../assets/carrucel5.jpg)">
                     <div class="content">
                     </div>
                 </div>
@@ -31,7 +31,11 @@
         </div>
     </div>
     <div class="buttons">
-        <img src="../../../assets/prev.png" alt="" id="next" />
-        <img src="../../../assets/next.png" alt="" id="prev" />
+        <button id="next">
+            <fa-icon [icon]="faArrowLeft"></fa-icon>
+        </button>
+        <button id="prev">
+            <fa-icon [icon]="faArrowRight"></fa-icon>
+        </button>
     </div>
 </div>
