--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -8,9 +8,9 @@
         </div>
     </div>
     <nav class="navbar" [ngClass]="{ 'open' : isActive}">
-        <a href="/">Inicio</a>
-        <a href="/nosotros">Nosotros</a>
-        <a href="/contacto">Contacto</a>
+        <a routerLink="/">Inicio</a>
+        <a routerLink="/nosotros">Nosotros</a>
+        <a routerLink="/contacto">Contacto</a>
     </nav>
 
 </div>
