--- a/src/app/layout/home-slider/home-slider.component.css
+++ b/src/app/layout/home-slider/home-slider.component.css
@@ -51,6 +51,7 @@
     top: 50%;
     transform: translate(150%, -70%);
     box-shadow: 0 30px 50px #505050;
+    border-radius: 5px;
 }
 
 .item:nth-child(1),
@@ -58,7 +59,7 @@
     left: 0;
     top: 0;
     transform: translate(0, 0);
-    border-radius: 0;
+    border-radius: 0 0 0 5px;
     width: 100%;
     height: 100%;
     box-shadow: none;
@@ -119,9 +120,13 @@
     width: 95%;
 }
 
-.buttons img {
-    max-height: 50px;
-    margin: 20px;
+.buttons button {
+    margin: 10px;
+    border: 0px;
+    background-color: transparent;
+    font-size: 3rem;
+    color: #fff;
+    cursor: pointer;
 }
 
 
