--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,7 +1,7 @@
 .banner {
     height: 100dvh;
     position: relative;
-    background: url(../../../assets/carrucel3.png) no-repeat center;
+    background: url(../../../assets/carrucel3.jpg) no-repeat center;
     background-size: cover;
     display: grid;
     place-content: center;
@@ -13,106 +13,209 @@
     color: #fff;
 }
 
-.description {
+/*DSÑKFJ{ÑLK{ÑDKLASFÑKASÑDFKÑLASKDFÑKSÑDFÑLASKDFÑLKASÑDFKÑKLASDFÑKÑSDKÑF*/
+
+.container {
+    margin-top: 20px;
     display: flex;
-    justify-content: space-between;
-    height: 501px;
-}
-
-.description .present {
-    margin: 20px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 40px;
-    border-radius: 5px;
-}
-
-.description .present h3 {
-    font-size: 30px;
-    font-weight: 300;
-}
-
-
-
-.description .present p {
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2);
-    padding: 40px;
-    margin: 30px 50px 0 50px;
-    font-size: 20px;
-}
-
-
-
-/*MEMBERS*/
-.about {
-    padding: 2rem;
-    display: flex;
-    align-items: center;
     justify-content: space-around;
-    flex-wrap: wrap;
 }
 
 .card {
-    width: 320px;
-    height: 300px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2);
-    margin: 20px;
+    position: relative;
+    width: 300px;
+    height: 500px;
+    margin: 0 auto;
+    background: var(--primary-color);
+    border-radius: 15px;
+    box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
 }
 
-.card img {
-    border-radius: 5px 5px 0 0;
-    height: 200px;
-    width: 320px;
-    object-fit: cover;
-}
-
-.card .content {
-    margin: 5px;
-}
-
-.card .content .title {
-    padding: 5px 20px 0 20px;
-}
-
-.card .content .title h3 {
-    font-size: 20px;
-    font-weight: 700;
-}
-
-
-.buttons {
+.face {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: center;
+    align-items: center;
 }
 
-/*En tu hoja de estilos */
-a:link,
-a:visited,
-a:active {
-    color: black;
-    text-decoration: none;
+.face.back {
+    box-sizing: border-box;
+    padding: 20px;
 }
 
-/*botenes*/
-.button {
-    font-size: 13px;
-    font-weight: 700;
-    width: 115px;
-    height: 38px;
-    border-radius: 8px;
-    border: 1px solid var(--contrast-color);
-    padding: 8px 12px;
-    margin-right: 5px;
-    gap: 8px;
+.face.back b {
+    margin: 0;
+    padding: 0;
+}
+
+.face.back .desc {
+    color: #eee;
+}
+
+.face.front {
+    transition: 0.5s;
+}
+
+.face.front b {
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
+    color: #000;
+    transition: 0.5s;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+}
+
+.face.back .content p {
+    font-size: 1.2rem;
+
+}
+
+
+.card:hover .face.front {
+    height: 60px;
+}
+
+.card:hover .face.front b {
+    font-size: 2em;
+}
+
+.face.front {
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+
+/*SLIDER*/
+.slides {
+    width: 65%;
+    height: 600px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nextButton,
+.previousButton {
+    position: absolute;
+    top: 50%;
+    border: 0px;
+    background-color: transparent;
+    font-size: 30px;
+    color: var(--primary-color);
+
     cursor: pointer;
 }
 
-.button:active {
-    color: var(--secondary-color);
-    box-shadow: 0 0.1rem var(--contrast-color);
-    transform: translateY(0.2rem);
+.nextButton {
+    right: 20px;
+    z-index: 20;
+}
+
+.previousButton {
+    left: 20px;
+    z-index: 20;
+}
+
+#indicators {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    bottom: 20px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.indicator {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: inline-block;
+    margin: 0px 5px;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px 2px rgba(25, 25, 25, 0.2);
+    transition: background-color 0.5s ease-in-out;
+}
+
+.indicator.active {
+    background-color: #4f4f4f;
+    box-shadow: none;
+}
+
+/**/
+
+.about {
+    margin-top: 5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.slide-col {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: none;
+}
+
+.slide-col.active {
+    display: flex;
+}
+
+.user-img {
+    position: absolute;
+    top: 0;
+    right: 6rem;
+    height: 100%;
+}
+
+.user-img img {
+    height: 100%;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .2);
+}
+
+.user-text {
+    background: var(--secondary-color);
+    width: 650px;
+    height: 400px;
+    position: absolute;
+    left: 6rem;
+    top: 57%;
+    transform: translateY(-50%);
+    border-radius: 5px;
+    color: #fff;
+    padding: 50px;
+    box-sizing: border-box;
+    z-index: 10;
+}
+
+.user-text p {
+    font-size: 18px;
+    line-height: 24px;
+    padding-left: 4px;
+}
+
+.user-text h3 {
+    color: #fff;
+    font-size: 20px;
 }
