--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,18 +18,29 @@
 <div class="content second">
     <div class="line"></div>
     <div class="text">
-        <h3>Nuestro Enfoque BIM</h3>
-        <p>
-            En DSP BIM, somos pioneros en ofrecer soluciones de Diseño BIM. Nuestro
-            equipo combina experiencia técnica y creatividad para transformar ideas en
-            realidad, asegurando eficiencia y precisión en cada proyecto.
-        </p>
-        <p>
-            Nos dedicamos a modelar, diseñar y optimizar espacios con la más avanzada
-            tecnología BIM.
-        </p>
+        <h3>¿Porque DSPBIM tiene que formar parte de tis proyectos?</h3>
+        <ul>
+            <li>
+                A partir de los modelos 3d logramos mayor llegar a un nivel altamente detallado que trae numerosas
+                ventajas en términos de eficiencia y precisión.
+            </li>
+            <li>
+                Agilizamos el flujo de trabajo entre los diferentes actores en la conformación de un proyecto
+                multidisciplinar
+            </li>
+            <li>
+                Podemos gestionar y organizar toda la información del proyecto. Desde la documentación técnica
+                hasta los datos relacionados con los materiales y las especificaciones.
+            </li>
+            <li>
+                Tenemos la capacidad para generar visualizaciones realistas y precisas.
+            </li>
+            <li>A traves de la cordinación de diciplinas se minimizan los errores de construcción y ahorra recursos
+                económicos.
+            </li>
+        </ul>
 
-        <a href="#">Mas sobre nosotros</a>
+        <a routerLink="nosotros">Mas sobre nosotros</a>
     </div>
     <img src="../../../assets/carrucel3.png" alt="Diseño de departamentos" />
 </div>
@@ -49,6 +60,7 @@
                 <div class="content">
                     <p class="heading">{{ service.name }}</p>
                     <p>{{ service.description }}</p>
+                    <a [routerLink]="service.src" class="service-link">conocer mas</a>
                 </div>
             </div>
         </div>
