feat(home-slider): cambios

--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -4,30 +4,31 @@
         <h2>Avanzado</h2>
         <h1>BIM</h1>
     </div>
+
     <div class="carrucel">
         <div class="container">
-            <div id="slide">
-                <div class="item" style="background-image: url(../../../assets/carrucel1.jpg)">
+            <ul class='slider' id="slide">
+                <li class="item" style="background-image: url(../../../assets/carrucel1.jpg)">
                     <div class="content">
                     </div>
-                </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel2.jpg)">
+                </li>
+                <li class="item" style="background-image: url(../../../assets/carrucel2.jpg)">
                     <div class="content">
                     </div>
-                </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel3.jpg)">
+                </li>
+                <li class="item" style="background-image: url(../../../assets/carrucel3.jpg)">
                     <div class="content">
                     </div>
-                </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel4.5.jpg)">
+                </li>
+                <li class="item" style="background-image: url(../../../assets/carrucel4.5.jpg)">
                     <div class="content">
                     </div>
-                </div>
-                <div class="item" style="background-image: url(../../../assets/carrucel5.jpg)">
+                </li>
+                <li class="item" style="background-image: url(../../../assets/carrucel5.jpg)">
                     <div class="content">
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </div>
     </div>
     <div class="buttons">
