--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -1,5 +1,6 @@
 <div class="banner">
     <div class="title">
+        <h3 class="arquitectura">2024 - Arquitectura</h3>
         <h2>Diseño</h2>
         <h2>Avanzado</h2>
         <h1>BIM</h1>
