--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -4,7 +4,8 @@
     <div class="logo">
         <img src="../../../assets/dsplogo.png" alt="Logo DSPBIM" />
         <div class="text">
-            <h4>DSP BIM</h4>
+            <h4>DSP</h4>
+            <h4>BIM</h4>
         </div>
     </div>
     <nav class="navbar" [ngClass]="{ 'open' : isActive}">
