--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,5 @@
 .content {
-    margin-top: 30px;
+    margin-top: 10rem;
     display: flex;
     max-height: 40rem;
     padding-right: 20px;
@@ -9,7 +9,8 @@
 
 
 .content.second {
-    margin-top: 4rem;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
 
 }
 
@@ -24,6 +25,7 @@
 
 .content .text {
     max-width: 350px;
+    line-height: 2rem;
 }
 
 .content .text h3 {
@@ -36,7 +38,7 @@
 .content .text p {
     font-weight: 200;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 2rem;
     margin-bottom: 30px;
 }
 
