--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -5,6 +5,51 @@
         <h1>BIM</h1>
     </div>
 
+    <main>
+        <ul class='slider' id="slide">
+            <li class='item' style="background-image: url(../../../assets/carrucel1.jpg)">
+                <div class='content'>
+                </div>
+            </li>
+            <li class='item' style="background-image: url(../../../assets/carrucel2.jpg)">
+                <div class='content'>
+                </div>
+            </li>
+            <li class='item' style="background-image: url(../../../assets/carrucel3.jpg)">
+                <div class='content'>
+                </div>
+            </li>
+            <li class='item' style="background-image: url(../../../assets/carrucel4.5.jpg)">
+                <div class='content'>
+                </div>
+            </li>
+            <li class='item' style="background-image: url(../../../assets/carrucel5.jpg)">
+                <div class='content'>
+                </div>
+            </li>
+        </ul>
+    </main>
+    <div class="buttons">
+        <button id="next">
+            <fa-icon [icon]="faArrowLeft"></fa-icon>
+        </button>
+        <button id="prev">
+            <fa-icon [icon]="faArrowRight"></fa-icon>
+        </button>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<!--
     <div class="carrucel">
         <div class="container">
             <ul class='slider' id="slide">
@@ -31,12 +76,4 @@
             </ul>
         </div>
     </div>
-    <div class="buttons">
-        <button id="next">
-            <fa-icon [icon]="faArrowLeft"></fa-icon>
-        </button>
-        <button id="prev">
-            <fa-icon [icon]="faArrowRight"></fa-icon>
-        </button>
-    </div>
-</div>
+-->
