feat(home-slider): terminado los estilo del slider
los estilos se rompen en una resolucion determinanda

--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -1,7 +1,9 @@
 <div class="banner">
     <div class="title">
-        <h2>Diseño</h2>
-        <h2>Avanzado</h2>
+        <div class="h2">
+            <h2>Diseño</h2>
+            <h2>Avanzado</h2>
+        </div>
         <h1>BIM</h1>
     </div>
 
