--- a/src/app/layout/home-slider/home-slider.component.css
+++ b/src/app/layout/home-slider/home-slider.component.css
@@ -1,7 +1,10 @@
 .banner {
     height: 100dvh;
+    width: auto;
     background-color: var(--primary-color);
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -102,39 +105,6 @@ main {
 
 }
 
-.content {
-    width: min(30vw, 400px);
-    position: absolute;
-    top: 50%;
-    left: 3rem;
-    transform: translateY(-50%);
-    font: 400 0.85rem helvetica, sans-serif;
-    color: white;
-    text-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
-    opacity: 0;
-    display: none;
-
-    & .title {
-        font-family: "arial-black";
-        text-transform: uppercase;
-    }
-
-    & .description {
-        line-height: 1.7;
-        margin: 1rem 0 1.5rem;
-        font-size: 0.8rem;
-    }
-
-    & button {
-        width: fit-content;
-        background-color: rgba(0, 0, 0, 0.1);
-        color: white;
-        border: 2px solid white;
-        border-radius: 0.25rem;
-        padding: 0.75rem;
-        cursor: pointer;
-    }
-}
 
 .item:nth-of-type(2) .content {
     display: block;
@@ -172,51 +142,71 @@ main {
     cursor: pointer;
 }
 
-.buttons button:hover {
-    color: var(--primary-color);
-    border-radius: 50%;
-    padding: 5px;
-    background-color: #fff;
-}
 
 
 
-@media (min-width: 651px) and (max-width: 899px) {
+@media (min-width: 651px) and (max-width: 1024px) {
+
+
+    .title {
+        display: flex;
+        position: absolute;
+        top: 20%;
+        left: auto;
+        z-index: 1000;
+    }
+
+    .title h2 {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 50px;
+        color: #fff;
+    }
+
+    .title h1 {
+        margin-left: 4px;
+        margin-top: -35px;
+        font-size: 100px;
+        font-weight: 700;
+    }
+
 
     main {
         position: absolute;
         width: 100%;
         height: 100%;
-
         border-radius: 0;
     }
+
 
     .item {
         width: 160px;
         height: 270px;
 
         &:nth-child(3) {
-            left: 50%;
+            left: 73%;
         }
 
         &:nth-child(4) {
-            left: calc(50% + 170px);
+            left: calc(73% + 180px);
         }
 
         &:nth-child(5) {
-            left: calc(50% + 220px);
-        }
-
-        &:nth-child(6) {
-            left: calc(50% + 220px);
-            opacity: 0;
+            left: calc(73% + 180px);
         }
     }
+
+    .buttons {
+        position: static;
+        align-self: flex-end;
+        margin-bottom: 3rem;
+    }
+
 }
+
 
 @media (max-width: 650px) {
     main {
-        position: absolute;
         width: 100%;
         height: 100%;
         border-radius: 0;
@@ -231,20 +221,22 @@ main {
         height: 220px;
 
         &:nth-child(3) {
-            left: 50%;
+            left: 65%;
         }
 
         &:nth-child(4) {
-            left: calc(50% + 140px);
+            left: calc(65% + 140px);
         }
 
         &:nth-child(5) {
-            left: calc(50% + 280px);
-        }
-
-        &:nth-child(6) {
-            left: calc(50% + 420px);
-            opacity: 0;
+            left: calc(65% + 140px);
         }
     }
+
+    .buttons {
+        position: static;
+        align-self: flex-end;
+        margin-bottom: 3rem;
+    }
+
 }
