fix(home-slider): arreglos en los titulos

--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -1,8 +1,10 @@
 <div class="banner">
     <div class="title">
-        <p class="arquitectura">2024 - Arquitectura</p>
-        <h2>Diseño</h2>
-        <h2>Avanzado</h2>
+        <div>
+            <p class="arquitectura">2024 - Arquitectura</p>
+            <h2>Diseño</h2>
+            <h2>Avanzado</h2>
+        </div>
         <h1>BIM</h1>
     </div>
 
