--- a/src/app/pages/services/services.component.css
+++ b/src/app/pages/services/services.component.css
@@ -7,6 +7,13 @@
     place-content: center;
 }
 
+
+.banner h1 {
+    font-size: 30px;
+    font-weight: 300;
+    color: #fff;
+}
+
 li {
     list-style: none;
 }
@@ -15,15 +22,66 @@ h3 {
     font-size: 20px;
 }
 
-.banner h1 {
-    font-size: 30px;
-    font-weight: 300;
-    color: #fff;
+p {
+    text-align: center;
+    max-width: 50rem;
 }
 
 .services-container {
     width: 100%;
-    padding: 2rem;
+    margin-top: 40px;
 }
 
-.benefits {}
+.name {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.name p {
+    max-width: 50px;
+}
+
+.name .line {
+    content: "";
+    left: 60px;
+    width: 30rem;
+    height: 2px;
+    background-color: #292929;
+    border-radius: 5px;
+}
+
+.name .spacer {
+    width: 30rem;
+}
+
+
+.benefits {
+    margin: 30px 0 30px 0;
+    text-align: center;
+}
+
+.offers {
+    margin: 30px 0 30px 0;
+    text-align: center;
+}
+
+.processes {
+    margin: 30px 0 30px 0;
+    text-align: center;
+}
+
+.tool-used {
+    margin: 30px 0 30px 0;
+    text-align: center;
+}
+
+.content {
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+}
+
+.content li {
+    margin: 0 5px;
+}
