chore(services-page): cambios en las fuentes

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -57,9 +57,12 @@
                         <div class="dropdown">
                             <select id="selectService" class="input form-control">
                                 <option selected disabled>Selecciona un servicio</option>
-                                <option value="servicio1">Servicio 1</option>
-                                <option value="servicio2">Servicio 2</option>
-                                <option value="servicio3">Servicio 3</option>
+                                <option value="servicio1">Documentacion Ejecutiva</option>
+                                <option value="servicio2">Bim Arquitectónico</option>
+                                <option value="servicio3">BIM Estructural</option>
+                                <option value="servicio2">MEP</option>
+                                <option value="servicio3">Deteccion de conflictos</option>
+                                <option value="servicio3">AS BUILT</option>
                             </select>
                         </div>
                     </div>
