--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -9,6 +9,7 @@
             <div class="spacer"></div>
         </div>
         <div class="content">
+            <div class="spacer"></div>
             <p>Implementar una Documentación Ejecutiva en tus proyectos ofrece una serie de beneficios clave.
                 Proporciona
                 planos detallados y precisos, lo que facilita la ejecución de la obra, y permite una colaboración
@@ -17,7 +18,9 @@
                 ante
                 entes reguladores al contar con documentación clara y completa, y optimiza el tiempo y los recursos al
                 tener
-                una documentación más eficiente y fácil de seguir.</p>
+                una documentación más eficiente y fácil de seguir.
+            </p>
+            <div class="spacer"></div>
         </div>
     </div>
     <div class="offers">
@@ -26,37 +29,45 @@
             <h3>Lo que ofrecemos</h3>
             <div class="spacer"></div>
         </div>
+
         <div class="content">
+            <div class="spacer"></div>
             <p>Ofrecemos dibujo BIM Revit graficando conceptos de diseño arquitectónico, estructural y MEP en planos 2D
                 y modelos 3D detallados y más precisos para las diferentes etapas de un proyecto.</p>
-        </div>
-        <ul>
-            <li>Creación de idea.</li>
-            <li>Presentaciones ante entes reguladores.</li>
-            <li>Documentaciones ejecutivas.</li>
-        </ul>
-    </div>
-    <div class="processes">
-        <div class="name">
-            <div class="line"></div>
-            <h2>Procesos de trabajo</h2>
             <div class="spacer"></div>
         </div>
         <div class="content">
-            <p>Nuestro equipo colabora estrechamente con los clientes para crear planos de planta, elevaciones, diseños
-                estructurales e integración de sistemas utilizando el software Revit y AutoCAD.</p>
-
-        </div>
-    </div>
-    <div class="tool-used">
-        <div class="name">
-            <div class="line"></div>
-            <h3>Herramientas o programas utilizados</h3>
+            <div class="spacer"></div>
+            <ul>
+                <li>Creación de idea.</li>
+                <li>Presentaciones ante entes reguladores.</li>
+                <li>Documentaciones ejecutivas.</li>
+            </ul>
             <div class="spacer"></div>
         </div>
-        <ul class="content">
-            <li>Revit</li>
-            <li>AutoCAD</li>
-        </ul>
+        <div class="processes">
+            <div class="name">
+                <div class="line"></div>
+                <h2>Procesos de trabajo</h2>
+                <div class="spacer"></div>
+            </div>
+            <div class="content">
+                <div class="spacer"></div>
+                <p>Nuestro equipo colabora estrechamente con los clientes para crear planos de planta, elevaciones,
+                    diseños
+                    estructurales e integración de sistemas utilizando el software Revit y AutoCAD.</p>
+                <div class="spacer"></div>
+            </div>
+        </div>
+        <div class="tool-used">
+            <div class="name">
+                <div class="line"></div>
+                <h3>Herramientas o programas utilizados</h3>
+                <div class="spacer"></div>
+            </div>
+            <ul class="cont">
+                <li>Revit</li>
+                <li>AutoCAD</li>
+            </ul>
+        </div>
     </div>
-</div>
