--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -46,4 +46,56 @@
         </div>
     </div>
 
+
+</div>
+<div class="contenedor-tarjetas">
+    <!-- Tarjeta 1 -->
+    <div class="tarjeta" #tarjeta1 (click)="toggleInfo(tarjeta1)">
+        <div class="contenedor-imagen">
+            <img src="tu_foto_1.jpg" alt="Nombre Persona" class="foto">
+        </div>
+        <div class="contenido-texto">
+            <h2>Nombre Persona 1</h2>
+            <p class="descripcion-breve">Breve descripción aquí...</p>
+            <div class="informacion-adicional">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A suscipit beatae nesciunt? Eos id
+                    corrupti expedita impedit cupiditate, voluptates cum perspiciatis pariatur facere aliquid
+                    voluptate recusandae, possimus aliquam nobis ipsam.</p>
+                <!-- Agrega más contenido aquí según sea necesario -->
+            </div>
+            <a href="javascript:void(0);" class="ver-mas">Ver más</a>
+        </div>
+    </div>
+
+    <!-- Tarjeta 2 -->
+    <div class="tarjeta" #tarjeta2 (click)="toggleInfo(tarjeta2)">
+        <div class="contenedor-imagen">
+            <img src="tu_foto_2.jpg" alt="Nombre Persona" class="foto">
+        </div>
+        <div class="contenido-texto">
+            <h2>Nombre Persona 2</h2>
+            <p class="descripcion-breve">Breve descripción aquí...</p>
+            <div class="informacion-adicional">
+                <p>Información adicional aquí...</p>
+                <!-- Agrega más contenido aquí según sea necesario -->
+            </div>
+            <a href="javascript:void(0);" class="ver-mas">Ver más</a>
+        </div>
+    </div>
+
+    <!-- Tarjeta 3 -->
+    <div class="tarjeta" #tarjeta3 (click)="toggleInfo(tarjeta3)">
+        <div class="contenedor-imagen">
+            <img src="tu_foto_3.jpg" alt="Nombre Persona" class="foto">
+        </div>
+        <div class="contenido-texto">
+            <h2>Nombre Persona 3</h2>
+            <p class="descripcion-breve">Breve descripción aquí...</p>
+            <div class="informacion-adicional">
+                <p>Información adicional aquí...</p>
+                <!-- Agrega más contenido aquí según sea necesario -->
+            </div>
+            <a href="javascript:void(0);" class="ver-mas">Ver más</a>
+        </div>
+    </div>
 </div>
