chore: correccion en fuente

--- a/src/app/pages/services/services.component.css
+++ b/src/app/pages/services/services.component.css
@@ -16,12 +16,13 @@
 
 
 h3 {
+    font-weight: normal;
     font-size: 25px;
     margin-top: -10px;
 }
 
 li {
-    list-style: none;
+    font-weight: 300;
     font-size: 20px;
 }
 
@@ -29,9 +30,7 @@ p {
     font-size: 20px;
     text-align: left;
     max-width: 50rem;
-
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
+    font-weight: 300;
     font-style: normal;
 
 }
