--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -29,7 +29,7 @@
 }
 
 .content .text h3 {
-    font-weight: bold;
+    font-weight: normal;
     font-size: 20px;
     line-height: 20px;
     margin: 0 0 30px -40px;
@@ -43,7 +43,7 @@
 }
 
 .content .text li {
-
+    font-weight: 200;
     list-style: circle;
     font-size: 20px;
     margin-bottom: 10px;
