--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -12,6 +12,7 @@
         <a routerLink="/">Inicio</a>
         <a routerLink="/nosotros">Nosotros</a>
         <a routerLink="/contacto">Contacto</a>
+        <a routerLink="/proyectos">Proyectos</a>
     </nav>
 
 </div>
